--- a/run_python/run_data_unequal_svm_direct_class_weight.ipynb
+++ b/run_python/run_data_unequal_svm_direct_class_weight.ipynb
@@ -218,7 +218,6 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -239,164 +238,114 @@
     "all_y = all_data[:9813, 2]\n",
     "print(all_X)\n",
     "print(all_y)\n",
-    "# print(type(all_X))\n",
-    "\n"
+    "# print(type(all_X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of class 1 samples before: 1416\n",
-      "Number of class 0 samples before: 8397\n",
-      "Number of class 1 samples after: 8397\n",
-      "[[0.2  2.   0.2  ... 0.   0.   0.56]\n",
-      " [0.1  1.   0.1  ... 0.   0.   0.93]\n",
-      " [2.1  4.   2.3  ... 0.2  0.2  0.63]\n",
-      " ...\n",
-      " [1.7  3.   1.7  ... 0.   0.   0.75]\n",
-      " [1.3  2.   1.3  ... 0.   0.   0.92]\n",
-      " [0.8  2.   2.1  ... 0.33 0.33 0.53]]\n",
-      "(16794, 30) (16794,)\n",
-      "Index(['m_sum_neg', 'c_neg', 'm_sum_all', 'm_sum_nzr', 'Mag', 'c_nzr', 'c_all',\n",
-      "       'm_max', 's_min', 'm_sdv_neg', 's_sdv_neg', 'm_avg_neg', 's_avg_neg',\n",
-      "       's_sdv_nzr', 'm_sdv_all', 's_sdv_all', 's_avg_nzr', 'm_avg_nzr',\n",
-      "       's_avg_all', 'Sc', 'm_avg_all', 'm_sum_pos', 'c_pos', 'm_min', 's_max',\n",
-      "       'm_sdv_pos', 's_sdv_pos', 'm_avg_pos', 's_avg_pos', 'm_sdv_nzr'],\n",
-      "      dtype='object')\n",
-      "[0. 1. 1. ... 1. 1. 0.]\n",
-      " 1) m_sdv_nzr                      0.299457\n",
-      " 2) m_sum_neg                      0.078260\n",
-      " 3) Mag                            0.076717\n",
-      " 4) m_sum_all                      0.051777\n",
-      " 5) m_sum_nzr                      0.050199\n",
-      " 6) c_neg                          0.039096\n",
-      " 7) s_min                          0.036226\n",
-      " 8) s_sdv_neg                      0.028025\n",
-      " 9) m_sdv_neg                      0.027609\n",
-      "10) m_max                          0.024995\n",
-      "11) s_avg_all                      0.022860\n",
-      "12) s_sdv_all                      0.022706\n",
-      "13) m_sdv_all                      0.022612\n",
-      "14) Sc                             0.019949\n",
-      "15) s_avg_nzr                      0.019168\n",
-      "16) m_avg_all                      0.018736\n",
-      "17) s_sdv_nzr                      0.018628\n",
-      "18) c_all                          0.018188\n",
-      "19) m_avg_neg                      0.017669\n",
-      "20) s_avg_neg                      0.017099\n",
-      "21) m_avg_nzr                      0.013728\n",
-      "22) m_min                          0.012821\n",
-      "23) s_max                          0.011892\n",
-      "24) c_nzr                          0.010235\n",
-      "25) s_sdv_pos                      0.008120\n",
-      "26) m_sdv_pos                      0.007900\n",
-      "27) m_sum_pos                      0.007825\n",
-      "28) m_avg_pos                      0.006686\n",
-      "29) s_avg_pos                      0.006632\n",
-      "30) c_pos                          0.004186\n"
+      "C:100000.0      gamma:1.0\n",
+      "fit_time:2883.6690+/-835.2614\n",
+      "score_time:1.5052+/-0.0169\n",
+      "test_f1:0.2922+/-0.0191\n",
+      "train_f1:0.7907+/-0.0066\n",
+      "test_accuracy:0.8122+/-0.0075\n",
+      "train_accuracy:0.9350+/-0.0028\n",
+      "test_precision:0.3211+/-0.0207\n",
+      "train_precision:0.7389+/-0.0143\n",
+      "test_recall:0.2691+/-0.0256\n",
+      "train_recall:0.8506+/-0.0048\n",
+      "\n",
+      "\n",
+      "C:100000.0      gamma:10.0\n",
+      "fit_time:2529.8073+/-386.4755\n",
+      "score_time:1.3997+/-0.0158\n",
+      "test_f1:0.1770+/-0.0344\n",
+      "train_f1:0.8049+/-0.0047\n",
+      "test_accuracy:0.8018+/-0.0099\n",
+      "train_accuracy:0.9386+/-0.0021\n",
+      "test_precision:0.2215+/-0.0457\n",
+      "train_precision:0.7433+/-0.0113\n",
+      "test_recall:0.1476+/-0.0283\n",
+      "train_recall:0.8778+/-0.0056\n",
+      "\n",
+      "\n",
+      "C:100000.0      gamma:100.0\n",
+      "fit_time:573.7161+/-171.4106\n",
+      "score_time:2.1262+/-0.0266\n",
+      "test_f1:0.1415+/-0.0395\n",
+      "train_f1:0.7899+/-0.0071\n",
+      "test_accuracy:0.7861+/-0.0132\n",
+      "train_accuracy:0.9287+/-0.0033\n",
+      "test_precision:0.1690+/-0.0487\n",
+      "train_precision:0.6873+/-0.0124\n",
+      "test_recall:0.1222+/-0.0339\n",
+      "train_recall:0.9288+/-0.0044\n",
+      "\n",
+      "\n",
+      "C:100000.0      gamma:1000.0\n",
+      "fit_time:6.5232+/-0.0314\n",
+      "score_time:2.3221+/-0.0104\n",
+      "test_f1:0.1063+/-0.0331\n",
+      "train_f1:0.7929+/-0.0047\n",
+      "test_accuracy:0.7899+/-0.0130\n",
+      "train_accuracy:0.9299+/-0.0021\n",
+      "test_precision:0.1397+/-0.0481\n",
+      "train_precision:0.6915+/-0.0079\n",
+      "test_recall:0.0862+/-0.0255\n",
+      "train_recall:0.9293+/-0.0028\n",
+      "\n",
+      "\n",
+      "C:100000.0      gamma:10000.0\n",
+      "fit_time:6.5044+/-0.0977\n",
+      "score_time:2.3619+/-0.0302\n",
+      "test_f1:0.0869+/-0.0329\n",
+      "train_f1:0.7929+/-0.0047\n",
+      "test_accuracy:0.7954+/-0.0127\n",
+      "train_accuracy:0.9299+/-0.0021\n",
+      "test_precision:0.1245+/-0.0515\n",
+      "train_precision:0.6915+/-0.0079\n",
+      "test_recall:0.0671+/-0.0244\n",
+      "train_recall:0.9293+/-0.0028\n",
+      "\n",
+      "\n",
+      "C:100000.0      gamma:100000.0\n",
+      "fit_time:6.5598+/-0.1022\n",
+      "score_time:2.3628+/-0.0413\n",
+      "test_f1:0.0869+/-0.0329\n",
+      "train_f1:0.7929+/-0.0047\n",
+      "test_accuracy:0.7954+/-0.0127\n",
+      "train_accuracy:0.9299+/-0.0021\n",
+      "test_precision:0.1245+/-0.0515\n",
+      "train_precision:0.6915+/-0.0079\n",
+      "test_recall:0.0671+/-0.0244\n",
+      "train_recall:0.9293+/-0.0028\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "#アップサンプリング前のクラス1のデータ数とクラス0のデータ数の出力\n",
-    "print(\"Number of class 1 samples before:\", all_y[all_y == 1].shape[0])\n",
-    "print(\"Number of class 0 samples before:\", all_y[all_y == 0].shape[0])\n",
-    "# print(all_X[all_y == 1])\n",
-    "# print(all_X[all_y == 0])\n",
-    "\n",
-    "#クラスの1のサンプルの個数がクラス0と同じになるまで新しいサンプルを復元抽出\n",
-    "X_upsampled, y_upsampled = resample(all_X[all_y == 1],\n",
-    "                                    all_y[all_y == 1],\n",
-    "                                    replace = True,\n",
-    "                                    n_samples = all_X[all_y == 0].shape[0],\n",
-    "                                    random_state = 123)\n",
-    "# アップサンプリング後のクラス１のデータ数とデータの中身の出力\n",
-    "print(\"Number of class 1 samples after:\", X_upsampled.shape[0])\n",
-    "print(X_upsampled)\n",
-    "# 元のクラス０のサンプルにアップサンプリングしたクラス０のサブセットを結合\n",
-    "X_bal = np.vstack((all_X[all_y == 0], X_upsampled))\n",
-    "y_bal = np.hstack((all_y[all_y == 0], y_upsampled))\n",
-    "print(X_bal.shape, y_bal.shape)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_bal, y_bal, test_size=0.3, random_state=0, stratify=y_bal )\n",
-    "\n",
-    "# データのテキストへの書き込み\n",
-    "#path = 'upsampled_claim_toiawase_data.txt'\n",
-    "# with open(path, mode='w') as f:\n",
-    "#     f.write(str(X_upsampled))\n",
-    "\n",
-    "# with open(path) as f:\n",
-    "#     print(f.read())\n",
-    "\n",
-    "# ランダムフォレストで特徴量の重要度を算出\n",
-    "print(all_data_pd.columns[3:])\n",
-    "# 特徴量の名称をfeat_labelsに書き込み\n",
-    "feat_labels = all_data_pd.columns[3:]\n",
-    "# ランダムフォレストオブジェクトの生成（決定木の個数＝５００）\n",
-    "forest = RandomForestClassifier(n_estimators = 500, random_state=1)\n",
-    "# モデルを適合\n",
-    "forest.fit(X_train, y_train)\n",
-    "# 特徴量の重要度を抽出\n",
-    "importances = forest.feature_importances_\n",
-    "# 重要度の降順で特徴量の名称、重要度を表示\n",
-    "indices = np.argsort(importances)[::-1]\n",
-    "print(y_test)\n",
-    "for f in range(X_train.shape[1]):\n",
-    "    print(\"%2d) %-*s %f\" %\n",
-    "          (f + 1, 30, feat_labels[indices[f]], importances[indices[f]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import cross_validate\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
-    "# 標準化、SVCのパイプラインの生成\n",
-    "pipe_svm = make_pipeline(StandardScaler(), SVC( random_state=2 ))\n",
-    "# グリッドサーチ\n",
-    "param_range = [0.00001,0.0001,0.001,0.01,0.1,1.0,10.0,100.0,1000.0,10000.0]\n",
-    "params = [{\"svc__C\":param_range, \"svc__kernel\":[\"linear\"]},{\"svc__C\":param_range, \"svc__gamma\":param_range, \"svc__kernel\":[\"rbf\"]}]\n",
-    "gs = GridSearchCV(estimator = pipe_svm, param_grid = params, scoring = \"accuracy\", cv = 3, n_jobs = -1)\n",
-    "# グリッドサーチモデルを適合\n",
-    "gs = gs.fit(X_train, y_train)\n",
-    "# グリッドサーチのスコアの出力\n",
-    "print(\"Gridsearch_CV_score: %.3f\" % gs.best_score_)\n",
-    "# その時のパラメータの組み合わせを出力\n",
-    "print(\"Gridsearch_best_param: %s\" % gs.best_params_)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# ベストとなったパラメータのモデルを用いてテストデータでの予測を実施\n",
-    "clf = gs.best_estimator_\n",
-    "clf.fit(X_train, y_train)\n",
-    "print(\"Test accuracy : %.3f\" % clf.score(X_test, y_test))\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "scores = cross_val_score(pipe)\n",
-    "pipe_best_svm = make_pipeline(StandardScaler(), SVC(C=, gamma=, kernel=\"rbf\", random_state=2))\n",
-    "pipe_best_svm.fit(X_train, y_train)\n",
-    "print(pipe_best_svm.sc)"
+    "scoring = [\"f1\", \"accuracy\", \"precision\", \"recall\"]\n",
+    "for c in [100000.0]:\n",
+    "    for g in [1.0, 10.0, 100.0, 1000.0, 10000.0, 100000.0]:\n",
+    "        print(\"C:%s      gamma:%s\" %(c,g))\n",
+    "        pipe = make_pipeline(StandardScaler(), SVC(C=c, gamma=g, kernel=\"rbf\", random_state=1, class_weight=\"balanced\"))\n",
+    "        kf = StratifiedKFold(n_splits=10, shuffle=True, random_state=2)\n",
+    "        scores = cross_validate(pipe, all_X, all_y, scoring=scoring, cv=kf)\n",
+    "        for key,value in scores.items():\n",
+    "            print(\"{}:{:.4f}+/-{:.4f}\".format(key, value.mean(), value.std()))\n",
+    "        print(\"\\n\")"
    ]
   }
  ],
