--- a/run_python/run_data_unequal_svm_direct_class_weight.ipynb
+++ b/run_python/run_data_unequal_svm_direct_class_weight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -199,14 +199,7 @@
       "9812       0.00       0.00       0.00       0.00       1.02  \n",
       "\n",
       "[9813 rows x 33 columns]\n",
-      "[[1.   3.   1.1  ... 0.1  0.1  0.34]\n",
-      " [0.5  1.   0.5  ... 0.   0.   0.77]\n",
-      " [2.1  3.   2.1  ... 0.   0.   0.91]\n",
-      " ...\n",
-      " [0.3  1.   0.3  ... 0.   0.   1.12]\n",
-      " [0.1  1.   0.8  ... 0.35 0.35 0.68]\n",
-      " [0.6  1.   0.6  ... 0.   0.   1.02]]\n",
-      "[1. 1. 1. ... 0. 0. 0.]\n"
+      "[   1    2    3 ... 9811 9812 9813]\n"
      ]
     }
    ],
@@ -236,8 +229,9 @@
     "all_X = all_data[:9813,3:33]\n",
     "#ラベル部分をall_yに読み込み\n",
     "all_y = all_data[:9813, 2]\n",
-    "print(all_X)\n",
-    "print(all_y)\n",
+    "all_num = np.array(all_data_pd[\"seq\"], dtype= \"int64\")\n",
+    "# print(all_X)\n",
+    "print(all_num)\n",
     "# print(type(all_X))"
    ]
   },
@@ -790,6 +784,8 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
+    "\n",
+    "\n",
     "all_X = all_X[::, :18]\n",
     "\n",
     "scoring = [\"f1\", \"accuracy\", \"precision\", \"recall\"]\n",
@@ -808,10 +804,93 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "all_X = all_X[:, :18]\n",
-    "print(all_X.shape)"
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "\n",
+    "for f in [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ,13, 14, 15, 16, 17, 18]:\n",
+    "    all_X = all_X[::, :f]\n",
+    "\n",
+    "    for c in [0.1, 1.0, 10.0, 100.0, 1000.0, 10000.0]:\n",
+    "        for g in [1.0, 0.1, 0.01, 0.001, 0.0001, 0.00001, 0.000001]:\n",
+    "            i = 1\n",
+    "    #       十回分のそれぞれのスコアを格納する空のlistを作成\n",
+    "            accuracy_train = []\n",
+    "            f1_train = []\n",
+    "            precision_train = []\n",
+    "            recall_train = []\n",
+    "\n",
+    "            accuracy_test = []\n",
+    "            f1_test = []\n",
+    "            precision_test = []\n",
+    "            recall_test = []\n",
+    "    #       パイプラインの作成\n",
+    "            pipe = make_pipeline(StandardScaler(), SVC(C=c, gamma=g, kernel=\"rbf\", random_state=1, class_weight=\"balanced\"))\n",
+    "            #層化10-fold交差検証の開始\n",
+    "            kf = StratifiedKFold(n_splits=10, shuffle=True, random_state=2)\n",
+    "            for train_index, test_index in kf.split(all_X, all_y):\n",
+    "                train_X, test_X = all_X[train_index], all_X[test_index]\n",
+    "                train_y, test_y = all_y[train_index], all_y[test_index]\n",
+    "                train_num, test_num = all_num[train_index], all_num[test_index]\n",
+    "    #             訓練データのラベル1のsmote前のデータ数の出力\n",
+    "    #             print(\"train_X(label=1): %s\" %train_X[train_y == 1].shape[0])\n",
+    "    #             print(\"train_X(label=0): %s\" %train_X[train_y == 0].shape[0])\n",
+    "\n",
+    "                pipe.fit(train_X, train_y)\n",
+    "                pre_label_train = pipe.predict(train_X)\n",
+    "                accuracy_train.append(accuracy_score(train_y, pre_label_train))\n",
+    "                f1_train.append(f1_score(train_y, pre_label_train))\n",
+    "                precision_train.append(precision_score(train_y, pre_label_train))\n",
+    "                recall_train.append(recall_score(train_y, pre_label_train))\n",
+    "\n",
+    "                pre_label_test = pipe.predict(test_X)\n",
+    "    #             print(pre_label_test)\n",
+    "                accuracy_test.append(accuracy_score(test_y, pre_label_test))\n",
+    "                f1_test.append(f1_score(test_y, pre_label_test))\n",
+    "                precision_test.append(precision_score(test_y, pre_label_test))\n",
+    "                recall_test.append(recall_score(test_y, pre_label_test))\n",
+    "    #             print(test_num)\n",
+    "                V_test_num = test_num.reshape(len(test_num), 1)\n",
+    "                V_pre_label_test = pre_label_test.reshape(len(pre_label_test), 1)\n",
+    "    #             print(V_test_num)\n",
+    "    #             print(V_pre_label_test)\n",
+    "                num_and_y = np.hstack((V_test_num, V_pre_label_test))\n",
+    "\n",
+    "                print(i)\n",
+    "                np.savetxt(\"%d_cost_sensitive_num_and_prelabel.csv\" %i, num_and_y, fmt=\"%3.f\", delimiter=\"\\t\", header=\"文書番号\\t予測ラベル\")\n",
+    "                i = i + 1\n",
+    "\n",
+    "            #十回のスコアの平均と標準偏差の出力\n",
+    "            print(\"\\n\")\n",
+    "            print(\"C:%s      gamma:%s\" %(c,g))\n",
+    "            print(\"accuracy_train: %.4f +- %.4f\" %(np.mean(accuracy_train), np.std(accuracy_train)))\n",
+    "            print(\"f1_train: %.4f +- %.4f\" %(np.mean(f1_train), np.std(f1_train)))\n",
+    "            print(\"precision_train: %.4f +- %.4f\" %(np.mean(precision_train), np.std(precision_train)))\n",
+    "            print(\"recall_train: %.4f +- %.4f\" %(np.mean(recall_train), np.std(recall_train)))\n",
+    "\n",
+    "            print(\"accuracy_test: %.4f +- %.4f\" %(np.mean(accuracy_test), np.std(accuracy_test)))\n",
+    "            print(\"f1_test: %.4f +- %.4f\" %(np.mean(f1_test), np.std(f1_test)))\n",
+    "            print(\"precision_test: %.4f +- %.4f\" %(np.mean(precision_test), np.std(precision_test)))\n",
+    "            print(\"recall_test: %.4f +- %.4f\" %(np.mean(recall_test), np.std(recall_test)))\n",
+    "            print(\"list_shape: %s\" %len(accuracy_train))\n",
+    "            print(\"\\n\")"
    ]
   }
  ],
